# mini-input-output-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  _sidebar.md  index.html  input.md  processor.md
docs/processor/: operator.md  value.md
src/spengine/: main.py
src/spengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spengine/app/: _elastic.py  beanstalkd.py  kafka.py  postgre.py  rabbitmq_consumer.py  rabbitmq_producer.py  s3.py
src/spengine/base/: mapper.py  observer.py  subject.py
src/spengine/components/: builder.py  mapper_factory.py  output_factory.py  processor_factory.py  source_factory.py
src/spengine/config/: __init__.py  kafka_config.py  postgres_config.py
src/spengine/core/: context.py  encoder.py  mapper_decorator.py  operator.py
src/spengine/core/mapper/: apac_master_mapper.py  atm_mapper.py  fusion_cctv_image_mapper.py  (+4 more)
src/spengine/data_source/: beanstalkd_subject.py  data_source_subject.py  file_subject.py  kafka_batch_subject .py  kafka_subject.py  rabbit_subject.py  xls_subject.py
src/spengine/helper/: helper.py
src/spengine/model/: elastic_metadata.py  mapper_context.py  pg_metadata.py  s3_metadata.py
src/spengine/processor/: base_processor.py  filter_processor.py  mapping_processor.py
src/spengine/target_output/: beanstalkd_target_output.py  elastic_target_output.py  file_target_output.py  kafka_target_output.py  pg_target_output.py  rabbit_target_output.py  s3_target_output.py
src/spengine/util/: call_function_from_string.py
tests/: test_operator.py
